tests/baselines/reference/ClassAndModuleThatMergeWithModuleMemberThatUsesClassTypeParameter.errors.txt
==== tests/cases/compiler/ClassAndModuleThatMergeWithModuleMemberThatUsesClassTypeParameter.ts (5 errors) ====
    // all expected to be errors
    
    class clodule1<T>{
    
        id: string;
        value: T;
    }
    
    module clodule1 {
        function f(x: T) { }
                      ~
!!! error TS2095: Could not find symbol 'T'.
    }
    
    class clodule2<T>{
    
        id: string;
        value: T;
    }
    
    module clodule2 {
        var x: T;
               ~
!!! error TS2095: Could not find symbol 'T'.
    
        class D<U extends T>{
                          ~
!!! error TS2095: Could not find symbol 'T'.
            id: string;
            value: U;
        }
    }
    
    class clodule3<T>{
    
        id: string;
        value: T;
    }
    
    module clodule3 {
        export var y = { id: T };
                             ~
!!! error TS2095: Could not find symbol 'T'.
    }
    
    class clodule4<T>{
    
        id: string;
        value: T;
    }
    
    module clodule4 {
        class D {
            name: T;
                  ~
!!! error TS2095: Could not find symbol 'T'.
        }
    }
    